Add TanStack routing and create /dashboard route

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-admin-ui",
+  "name": "blog-cms-ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@robokae/robokae-ui": "^1.0.22",
+    "@tanstack/react-router": "^1.157.18",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tanstack/router-plugin": "^1.157.18",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
